
  - Some minor reformatting of code.

- 25 May 2019 M.Fuerstenau version 1.1.1
  - Added modified SSL certificate validation by Justin Michael

- 26 May 2019 M.Fuerstenau version 1.2.0
  - Merged:
     - 25 May 2019 Ricardo Bartels
       - request ESXi host or vCenter version trough runtime
       - add feature to request licenses informations from host or vCenter
  - Bugfix
    - An option --open_vm_tools_okto give OK instead of UNKNOWN was added 
      in 2015(!) but only for dc_runtime_info() but not for vm_runtime_info().
      It was also not part of help() or the command reference. Fixed.
  - Reformatted code of system_license_info()
    - Corresponding braces and brackets shouldbe in the same column. 
      This makes reading of the code easier.
    - Same for unified indentions
    - Function calls should not be spread over several lines exept you have
      clean indentions. Also for better readability.
    - Replaced "elsif" by "else if" also for clean indention and ....
    - New option --no_vm_tools_ok. It maybe for some reasons that you
      have virtual machines without VMware tools. This should not cause an alarm.
  - New option  --unconnected_nics. Sets status for unconnected nics. This option
    replaces hardcoded set to critical by Ricardo Bartels

    Possible values are:
    OK or ok
    CRITICAL or critical or CRIT or crit
    WARNING or warning or WARN or warn

    Default is CRITICAL. Values are case insensitive.

- 1 Jun 2019 M.Fuerstenau version 1.2.1
  - Added some fixes from Ricardo Bartels
    - fixed dates, names and typos in recent release notes
    - documented/renamed new option unconnected_nics to unplugged_nics_state
    - fix option maintenance_mode_state, now passed on to all host modules
      (Thx to Ricardo to correct my lousy "middle-in-thenight-work - Martin)
  - Added fix from Claudio Kuenzler
    - Corrected perf data on net checks  
- Replaced elsif by else...if in datastore_volumes_info().